# lean-to

./: .gitignore  CMakeLists.txt  README.md  REPL.lean  REPLBin.lean  REPLLib.lean  asm-kernel-cpp.out  asm-kernel.cpp  kernel_exe.py  lakefile.lean  makefile  picohash.h  pyproject.toml  shell.nix  simple_kernel.py  uuid.h
examples/: HelloWorld.ipynb
kernelspec/asm/: kernel.json
kernelspec/asmcpp/: kernel.json
