[tool.poetry]
name = "lean-to"
version = "0.1.0"
description = ""
authors = ["Siddharth Bhat <siddu.druid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyzmq = "^22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
